.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mono-api
    app.kubernetes.io/version: "c41bc24"
  name: mono-api
  namespace: huitzilin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mono-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mono-api
        app.kubernetes.io/version: "c41bc24"
    spec:
      containers:
        - image: registry.digitalocean.com/softmora/huitzilin/mono-api:c41bc24
          name: mono-api
          ports:
            - name: http
              containerPort: 3000
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mono-api
  name: mono-api
  namespace: huitzilin
spec:
  ports:
  - name: 80-3000
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: mono-api
  type: ClusterIP
