.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: mono-api
  name: mono-api
  namespace: huitzilin
spec:
  ingressClassName: nginx
  rules:
    - host: api-huitzilin.softmora.com.mx
      http:
        paths:
          - backend:
              service:
                name: mono-api
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - 'api-huitzilin.softmora.com.mx'
      secretName: softmora-com-mx-tls
